--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,9 +1,16 @@
 title: "The Higher-Resolution Hypothesis"
 description: "Autism as a distributed neural architecture producing higher-resolution cognition through overlapping network activation."
-theme: minima
+# Removed theme: minima to use custom layout
 markdown: kramdown
 kramdown:
   input: GFM
   hard_wrap: false
   syntax_highlighter: rouge
 permalink: pretty
+
+# Exclude files from processing
+exclude:
+  - README.md
+  - .gitignore
+  - Gemfile
+  - Gemfile.lock
